--- a/naukri.html
+++ b/naukri.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <!--header-->
-        <div class="header">
+        <head class="header">
             <div class="left-section">
                 <div><img width="148p" height="40px" src="images/naukriLogo.svg" alt="naukriLogo"></div></div>
             <div class="middle-section">
@@ -39,9 +39,10 @@
                 <div id="for">For employers</div>
                 <div id="arrow"><img src="images/down-arrow.svg"></div>
             </div>
-        </div>
+        </head>
 
         <!--body-->
+        <main>
         <div class="title">
             <h1>Find your dream job now</h1>
             <div>5 lakh+ jobs for you to explore</div>
@@ -614,8 +615,9 @@
                 </div>
             </div>
         </div>
+        </main>
         <!--footer-->
-        <div class="footer-container">
+        <footer class="footer-container">
             <div class="footer-1">
                 <div class="footer-1-1">
                     <img src="images/naukriLogo.svg">
@@ -671,7 +673,7 @@
                     <span><img src="images/footer/jeevansathi.png"></span>
                 </div>
             </div>
-        </div>
+        </footer>
     </body>
 
 </html>
