--- a/naukri.html
+++ b/naukri.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <!--header-->
-        <head class="header">
+        <header class="header">
             <div class="left-section">
                 <div><img width="148p" height="40px" src="images/naukriLogo.svg" alt="naukriLogo"></div></div>
             <div class="middle-section">
@@ -39,7 +39,7 @@
                 <div id="for">For employers</div>
                 <div id="arrow"><img src="images/down-arrow.svg"></div>
             </div>
-        </head>
+        </header>
 
         <!--body-->
         <main>
